--- a/index.html
+++ b/index.html
@@ -1,5 +1,15 @@
+<!DOCTYPE.html>
 <html>
-	<h1>Федюков Андрей Юрьевич</h1>
-	<p>Да</p>
-	<a href="mailto:fedyukov.2009@mail.ru">мой еmail</a>
+	
+	<head>
+		<link href="style.css" rel="stylesheet"/>
+		<title>gthdsq cfqn</title>	
+	</head>
+	
+	<body>
+		<h1 class="header">Федюков Андрей Юрьевич</h1>
+		<p>Нет</p>
+		<a href="mailto:fedyukov.2009@mail.ru">мой еmail</a>
+	</body>
+		
 </html>
