--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	
 	<body>
 		<h1 class="header">Федюков Андрей Юрьевич</h1>
-		<p>Нет</p>
+		<p class="new">Нет</p>
 		<a href="mailto:fedyukov.2009@mail.ru">мой еmail</a>
 	</body>
 		
