--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 	
 	<head>
 		<link href="style.css" rel="stylesheet"/>
-		<title>gthdsq cfqn</title>	
+		<title>Мой проект</title>	
 	</head>
 	
+	
 	<body>
-		<h1 class="header">Федюков Андрей Юрьевич</h1>
-		<p class="new">Нет</p>
-		<a href="mailto:fedyukov.2009@mail.ru">мой еmail</a>
+		<div class="header">
+			<h1 class="h1">Федюков Андрей Юрьевич</h1>
+			<p class="text">Нет</p>
+			<a class="email" href="mailto:fedyukov.2009@mail.ru">мой еmail</a>
+		</div>
 	</body>
 		
 </html>
