--- a/index.html
+++ b/index.html
@@ -2,17 +2,31 @@
 <html>
 	
 	<head>
+	
 		<link href="style.css" rel="stylesheet"/>
 		<title>Мой проект</title>	
+	
 	</head>
 	
 	
 	<body>
-		<div class="header">
+		
+		<div class="header container">
 			<h1 class="h1">Федюков Андрей Юрьевич</h1>
 			<p class="text">Нет</p>
 			<a class="email" href="mailto:fedyukov.2009@mail.ru">мой еmail</a>
 		</div>
+		
+		<div class="feedback container">
+			
+			<p>Напиши мне если тебе нефиг делать</p>
+			
+			<form>
+				<input class="form__input" placeholder="Введите сообщение" type="text"/>
+			</form>
+			
+		</div>
+	
 	</body>
 		
 </html>
