--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
 			<p>Напиши мне если тебе нефиг делать</p>
 			
 			<form>
-				<input class="form__input" placeholder="Введите сообщение" type="text"/>
+				<input class="form__input" placeholder="Введите сообщение..." type="text"/>
+				<input class="form__input" placeholder="Введите вашу почту..." type="mail"/>
+				<button class="form__button">Нажми на меня</button>
+
 			</form>
 			
 		</div>
